Fixed 'wrapping' issue with Register and Add to calendar buttons on 'event' cards. Added a media query to set a { display: block; } between 990px and 1200px.

--- a/scss/components/cards/_events.scss
+++ b/scss/components/cards/_events.scss
@@ -64,3 +64,23 @@
 		}
 	}
 }
+
+@media (max-width: 1200px) {
+
+	.register {
+
+		a {
+			display: block;
+			margin-bottom: 1em;
+		}	
+	}
+}
+@media (max-width: 990px) {
+
+	.register {
+
+		a {
+			display: inline;
+		}	
+	}
+}
